<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="85dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="310dp"
            android:layout_height="272dp"
            android:text="@string/TextoTelaInicial"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="195dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/CodigoRecebido"
                    tools:layout_editor_absoluteX="55dp"
                    tools:layout_editor_absoluteY="567dp" />

                <EditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:maxLength="6"
                    android:inputType="text" />

            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/TextoConfirmar"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="594dp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

        <Button
            android:id="@+id/button2"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/Sair"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="291dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/_4ec9ee6_a826_4d38_ba41_d7db8d8fed22_200x200"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>