<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuTelaPrincipal">

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="735dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="25dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="-5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTranspAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TransporteAtual"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="594dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTranspFut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TransporteFuturo"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="594dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTranspRealizado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TransporteRealizado"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="594dp" />

        </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sair"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="594dp" />
            </LinearLayout>

    </LinearLayout>

        <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="270dp"
            android:layout_height="159dp"
            app:srcCompat="@drawable/_4ec9ee6_a826_4d38_ba41_d7db8d8fed22_200x200"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="10dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>